--- a/spec.html
+++ b/spec.html
@@ -21,6 +21,68 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
   <emu-clause id="sec-datetimeformat-abstracts">
     <h1>Abstract Operations For DateTimeFormat Objects</h1>
 
+    <p>
+      Several DateTimeFormat algorithms use values from the following table, which provides internal slots, property names and allowable values for the components of date and time formats:
+    </p>
+
+    <emu-table id="table-datetimeformat-components">
+      <emu-caption>Components of date and time formats</emu-caption>
+      <table class="real-table">
+        <thead>
+          <tr>
+            <th>Internal Slot</th>
+            <th>Property</th>
+            <th>Values</th>
+          </tr>
+        </thead>
+        <tr>
+          <td>[[Weekday]]</td>
+          <td>`"weekday"`</td>
+          <td>`"narrow"`, `"short"`, `"long"`</td>
+        </tr>
+        <tr>
+          <td>[[Era]]</td>
+          <td>`"era"`</td>
+          <td>`"narrow"`, `"short"`, `"long"`</td>
+        </tr>
+        <tr>
+          <td>[[Year]]</td>
+          <td>`"year"`</td>
+          <td>`"2-digit"`, `"numeric"`</td>
+        </tr>
+        <tr>
+          <td>[[Month]]</td>
+          <td>`"month"`</td>
+          <td>`"2-digit"`, `"numeric"`, `"narrow"`, `"short"`, `"long"`</td>
+        </tr>
+        <tr>
+          <td>[[Day]]</td>
+          <td>`"day"`</td>
+          <td>`"2-digit"`, `"numeric"`</td>
+        </tr>
+        <tr>
+          <td>[[Hour]]</td>
+          <td>`"hour"`</td>
+          <td>`"2-digit"`, `"numeric"`</td>
+        </tr>
+        <tr>
+          <td>[[Minute]]</td>
+          <td>`"minute"`</td>
+          <td>`"2-digit"`, `"numeric"`</td>
+        </tr>
+        <tr>
+          <td>[[Second]]</td>
+          <td>`"second"`</td>
+          <td>`"2-digit"`, `"numeric"`</td>
+        </tr>
+        <tr>
+          <td>[[TimeZoneName]]</td>
+          <td>`"timeZoneName"`</td>
+          <td>`"short"`, `"long"`</td>
+        </tr>
+      </table>
+    </emu-table>
+    
     <emu-clause id="sec-initializedatetimeformat" aoid="InitializeDateTimeFormat">
       <h1>InitializeDateTimeFormat ( _dateTimeFormat_, _locales_, _options_ )</h1>
 
