--- a/spec.html
+++ b/spec.html
@@ -9,7 +9,7 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
 
 <emu-biblio href="./biblio.json"></emu-biblio>
 
-<emu-intro>
+<emu-intro id="sec-intro">
   <h1>Introduction</h1>
 
   <p>This proposal adds two options to `Intl.DateTimeFormat`: `dateStyle` and `timeStyle`. These options give a compact way to request the appropriate, locale-specific way to ask for a date and time of given lengths. See <a href="https://github.com/tc39/proposal-ecma402-datetime-style/blob/master/README.md">the README</a> for more context.</p>
@@ -188,30 +188,28 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
       </emu-alg>
     </emu-clause>
     <emu-clause id="sec-date-time-style-pattern" aoid="DateTimeStylePattern">
-      <ins>
-        <h1>DateTimeStylePattern ( _dateStyle_, _timeStyle_, _dataLocaleData_, _hourCycle_ )</h1>
-        <p>The DateTimeStylePattern abstract operation accepts arguments _dateStyle_ and _timeStyle_, which are each either *undefined*, `"full"`, `"long"`, `"medium"` or `"short"`, at least one of which is not *undefined*, _dataLocaleData_, which is a record from %DateTimeFormat%.[[LocaleData]][_locale_] for some locale _locale_, and _hourCycle_, which is either `"h11"`, `"h12"`, `"h23"`, or `"h24"`. It returns the appropriate pattern for date time formatting based on the parameters.</p>
-        <emu-alg>
-          1. If _timeStyle_ is not *undefined*,
-            1. Assert: _timeStyle_ is one of `"full"`, `"long"`, `"medium"` or `"short"`.
-            1. Let _timeFormats_ be _dataLocaleData_.[[TimeFormat]].[[&lt;_timeStyle_&gt;]].
-            1. If _hourCycle_ is `"h11"` or `"h12"`, then
-              1. Let _timeFormat_ be _timeFormats_.[[pattern12]].
-            1. Else,
-              1. Let _timeFormat_ be _timeFormats_.[[pattern]].
-          1. If _dateStyle_ is not *undefined*,
-            1. Assert: _dateStyle_ is one of `"full"`, `"long"`, `"medium"` or `"short"`.
-            1. Let _dateFormat_ _dataLocaleData_.[[DateFormat]].[[&lt;_dateStyle_&gt;]].
-          1. If _dateStyle_ is not *undefined* and _timeStyle_ is not *undefined*,
-            1. Let _connector_ be _dataLocaleData_.[[DateTimeFormat]].[[&lt;_dateStyle_&gt;]].
-            1. Return the string _connector_ with the substring `"{0}"` replaced with _timePattern_ and the substring `"{1}"` replaced with _datePattern_.
-          1. If _timeStyle_ is not *undefined*, then
-            1. Return _timeFormat_.
-          1. Assert: _dateStyle_ is not *undefined*.
-          1. Return _dateFormat_.
-        </emu-alg>
-      </emu-clause>
-    </ins>
+      <h1><ins>DateTimeStylePattern ( _dateStyle_, _timeStyle_, _dataLocaleData_, _hourCycle_ )</ins></h1>
+      <p>The DateTimeStylePattern abstract operation accepts arguments _dateStyle_ and _timeStyle_, which are each either *undefined*, `"full"`, `"long"`, `"medium"` or `"short"`, at least one of which is not *undefined*, _dataLocaleData_, which is a record from %DateTimeFormat%.[[LocaleData]][_locale_] for some locale _locale_, and _hourCycle_, which is either `"h11"`, `"h12"`, `"h23"`, or `"h24"`. It returns the appropriate pattern for date time formatting based on the parameters.</p>
+      <emu-alg>
+        1. If _timeStyle_ is not *undefined*,
+          1. Assert: _timeStyle_ is one of `"full"`, `"long"`, `"medium"` or `"short"`.
+          1. Let _timeFormats_ be _dataLocaleData_.[[TimeFormat]].[[&lt;_timeStyle_&gt;]].
+          1. If _hourCycle_ is `"h11"` or `"h12"`, then
+            1. Let _timeFormat_ be _timeFormats_.[[pattern12]].
+          1. Else,
+            1. Let _timeFormat_ be _timeFormats_.[[pattern]].
+        1. If _dateStyle_ is not *undefined*,
+          1. Assert: _dateStyle_ is one of `"full"`, `"long"`, `"medium"` or `"short"`.
+          1. Let _dateFormat_ _dataLocaleData_.[[DateFormat]].[[&lt;_dateStyle_&gt;]].
+        1. If _dateStyle_ is not *undefined* and _timeStyle_ is not *undefined*,
+          1. Let _connector_ be _dataLocaleData_.[[DateTimeFormat]].[[&lt;_dateStyle_&gt;]].
+          1. Return the string _connector_ with the substring `"{0}"` replaced with _timePattern_ and the substring `"{1}"` replaced with _datePattern_.
+        1. If _timeStyle_ is not *undefined*, then
+          1. Return _timeFormat_.
+        1. Assert: _dateStyle_ is not *undefined*.
+        1. Return _dateFormat_.
+      </emu-alg>
+    </emu-clause>
   </emu-clause>
 
   <emu-clause id="sec-intl-datetimeformat-constructor">
@@ -300,7 +298,7 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
       </ul>
 
       <p>
-        EXAMPLE     An implementation might include the following record as part of its English locale data: {[[hour]]: `"numeric"`, [[minute]]: `"2-digit"`, [[second]]: `"2-digit"`, [[pattern]]: `"{hour}:{minute}:{second}"`, [[pattern12]]: `"{hour}:{minute}:{second} {ampm}"`}.
+        EXAMPLE     An implementation might include the following record as part of its English locale data: {[[Hour]]: `"numeric"`, [[Minute]]: `"2-digit"`, [[Second]]: `"2-digit"`, [[Pattern]]: `"{hour}:{minute}:{second}"`, [[Pattern12]]: `"{hour}:{minute}:{second} {ampm}"`}.
       </p>
 
       <emu-note>
