Throw RangeError in case old style is mixed with new style.

--- a/spec.html
+++ b/spec.html
@@ -124,6 +124,8 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
               1. <ins>Set _hc_ to `"h23"`.</ins>
             1. <ins>Else,</ins>
               1. <ins>Set _hc_ to `"h24"`.</ins>
+        1. <ins>Else if _hourCycle_ is not *undefined*, then,</ins>
+          1. <ins>Set _hc_ to _hourCycle_.</ins>
         1. Set _dateTimeFormat_.[[NumberingSystem]] to _r_.[[nu]].
         1. <del>Let _dataLocale_ be _r_.[[dataLocale]].</del>
         1. Let _timeZone_ be ? Get(_options_, `"timeZone"`).
@@ -144,6 +146,8 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
           1. <ins>Set _dateTimeFormat_.[[TimeStyle]] to _timeStyle_.</ins>
           1. <ins>Set _dateTimeFormat_.[[HourCycle]] to _hc_.</ins>
         1. <ins>If _dateStyle_ or _timeStyle_ are not *undefined*, then</ins>
+          1. <ins>If any of the Properties from <emu-xref href="#table-datetimeformat-components"></emu-xref> except of `hourCycle`, is defined in _options_,</ins>
+            1. <ins>Throw a *RangeError* exception.</ins>
           1. <ins>Let _pattern_ be DateTimeStylePattern(_dateStyle_, _timeStyle_, _dataLocaleData_, _hc_).</ins>
         1. <ins>Else,</ins>
           1. Let _opt_ be a new Record.
