Mention [[DateFormat]], [[TimeFormat]] and [[DateTimeFormat]] fields are Records

--- a/spec.html
+++ b/spec.html
@@ -295,7 +295,7 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         </li>
         <li>
           <ins>
-            [[LocaleData]][locale] must contain [[DateFormat]], [[TimeFormat]] and [[DateTimeFormat]] fields, each of which has [[full]], [[long]], [[medium]] and [[short]] fields. These fields have string pattern values for [[DateFormat]] and [[DateTimeFormat]]; for [[TimeFormat]], they are records with [[pattern]] and [[pattern12]] fields, which are string patterns.
+            [[LocaleData]][locale] must contain [[DateFormat]], [[TimeFormat]] and [[DateTimeFormat]] fields, the value of these fields are Records, where each of which has [[full]], [[long]], [[medium]] and [[short]] fields. These fields have string pattern values for [[DateFormat]] and [[DateTimeFormat]]; for [[TimeFormat]], they are records with [[pattern]] and [[pattern12]] fields, which are string patterns.
           </ins>
          </li>
       </ul>
