--- a/spec.html
+++ b/spec.html
@@ -149,7 +149,12 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         1. <ins>If _timeStyle_ is not *undefined*, then</ins>
           1. <ins>Set _dateTimeFormat_.[[TimeStyle]] to _timeStyle_.</ins>
           1. <ins>Set _dateTimeFormat_.[[HourCycle]] to _hc_.</ins>
-        1. <ins>If _dateStyle_ or _timeStyle_ are not *undefined*, then</ins>
+        1. <ins>If _dateStyle_ is not *undefined* or _timeStyle_ is not *undefined*, then</ins>
+          1. <ins>For each row in <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, do</ins>
+            1. <ins>Let _prop_ be the name given in the Property column of the row.</ins>
+            1. <ins>Let _p_ be _opt_.[[&lt;_prop_&gt;]].</ins>
+            1. <ins>If _p_ is not *undefined*, then</ins>
+              1. <ins>Throw a *RangeError* exception.</ins>
           1. <ins>Let _pattern_ be DateTimeStylePattern(_dateStyle_, _timeStyle_, _dataLocaleData_, _hc_).</ins>
         1. <ins>Else,</ins>
           1. Let _formats_ be _dataLocaleData_.[[formats]].
