--- a/spec.html
+++ b/spec.html
@@ -135,8 +135,14 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         1. Else,
           1. Let _timeZone_ be DefaultTimeZone().
         1. Set _dateTimeFormat_.[[TimeZone]] to _timeZone_.
+        1. Let _opt_ be a new Record.
+        1. For each row of <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, do
+          1. Let _prop_ be the name given in the Property column of the row.
+          1. Let _value_ be ? GetOption(_options_, _prop_, `"string"`, &laquo; the strings given in the Values column of the row &raquo;, *undefined*).
+          1. Set _opt_.[[&lt;_prop_&gt;]] to _value_.
+        1. Let _matcher_ be ? GetOption(_options_, `"formatMatcher"`, `"string"`, &laquo; `"basic"`, `"best fit"` &raquo;, `"best fit"`).
         1. <del>Let _dataLocaleData_ be _localeData_.[[&lt;_dataLocale_&gt;]].</del>
-        1. Let _formats_ be _dataLocaleData_.[[formats]].
+        1. <del>Let _formats_ be _dataLocaleData_.[[formats]].</del>
         1. <ins>Let _dateStyle_ be ? GetOption(_options_, `"dateStyle"`, `"string"`, &laquo; `"full"`, `"long"`, `"medium"`, `"short"` &raquo;, *undefined*).</ins>
         1. <ins>If _dateStyle_ is not *undefined*, set _dateTimeFormat_.[[DateStyle]] to _dateStyle_.</ins>
         1. <ins>Let _timeStyle_ be ? GetOption(_options_, `"timeStyle"`, `"string"`, &laquo; `"full"`, `"long"`, `"medium"`, `"short"` &raquo;, *undefined*).</ins>
@@ -146,12 +152,7 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         1. <ins>If _dateStyle_ or _timeStyle_ are not *undefined*, then</ins>
           1. <ins>Let _pattern_ be DateTimeStylePattern(_dateStyle_, _timeStyle_, _dataLocaleData_, _hc_).</ins>
         1. <ins>Else,</ins>
-          1. Let _opt_ be a new Record.
-          1. For each row of <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, do
-            1. Let _prop_ be the name given in the Property column of the row.
-            1. Let _value_ be ? GetOption(_options_, _prop_, `"string"`, &laquo; the strings given in the Values column of the row &raquo;, *undefined*).
-            1. Set _opt_.[[&lt;_prop_&gt;]] to _value_.
-          1. Let _matcher_ be ? GetOption(_options_, `"formatMatcher"`, `"string"`, &laquo; `"basic"`, `"best fit"` &raquo;, `"best fit"`).
+          1. Let _formats_ be _dataLocaleData_.[[formats]].
           1. If _matcher_ is `"basic"`, then
             1. Let _bestFormat_ be BasicFormatMatcher(_opt_, _formats_).
           1. Else,
