--- a/spec.html
+++ b/spec.html
@@ -150,12 +150,20 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         1. <ins>If _timeStyle_ is not *undefined*, then</ins>
           1. <ins>Set _dateTimeFormat_.[[HourCycle]] to _hc_.</ins>
         1. <ins>If _dateStyle_ is not *undefined* or _timeStyle_ is not *undefined*, then</ins>
+          1. <ins>Let _pattern_ be DateTimeStylePattern(_dateStyle_, _timeStyle_, _dataLocaleData_, _hc_).</ins>
+          1. <ins>Set _dateTimeFormat_.[[Pattern]] to _pattern_.</ins>
           1. <ins>For each row in <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, do</ins>
             1. <ins>Let _prop_ be the name given in the Property column of the row.</ins>
             1. <ins>Let _p_ be _opt_.[[&lt;_prop_&gt;]].</ins>
             1. <ins>If _p_ is not *undefined*, then</ins>
               1. <ins>Throw a *RangeError* exception.</ins>
-          1. <ins>Let _pattern_ be DateTimeStylePattern(_dateStyle_, _timeStyle_, _dataLocaleData_, _hc_).</ins>
+            1. <ins>If _prop_ is present in the _pattern_, do</ins>
+              1. <ins>If _dateStyle_ is not *undefined*, do</ins>
+                1. <ins>Let _p_ be _dataLocaleData_.[[DateFormat]].[[&lt;_dateStyle_&gt;]].[[&lt;_prop_&gt;]].</ins>
+                1. <ins>Set _dateTimeFormat_'s internal slot whose name is the Internal Slot column of the row to _p_.</ins>
+              1. <ins>If _timeStyle is not *undefined*, do</ins>
+                1. <ins>Let _p_ be _dataLocaleData_.[[TimeFormat]].[[&lt;_timeStyle&gt;]].[[&lt;_prop_&gt;]].</ins>
+                1. <ins>Set _dateTimeFormat_'s internal slot whose name is the Internal Slot column of the row to _p_.</ins>
         1. <ins>Else,</ins>
           1. Let _formats_ be _dataLocaleData_.[[formats]].
           1. If _matcher_ is `"basic"`, then
@@ -192,7 +200,8 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
           1. Else,
             1. Set _dateTimeFormat_.[[HourCycle]] to *undefined*.
             1. Let _pattern_ be _bestFormat_.[[pattern]].
-        1. Set _dateTimeFormat_.[[Pattern]] to _pattern_.
+          1. <ins>Set _dateTimeFormat_.[[Pattern]] to _pattern_.</ins>
+        1. <del>Set _dateTimeFormat_.[[Pattern]] to _pattern_.</del>
         1. Return _dateTimeFormat_.
       </emu-alg>
     </emu-clause>
@@ -248,7 +257,7 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
             1. Let _timeFormat_ be _timeFormats_.[[pattern]].
         1. If _dateStyle_ is not *undefined*, then
           1. Assert: _dateStyle_ is one of `"full"`, `"long"`, `"medium"`, or `"short"`.
-          1. Let _dateFormat_ be _dataLocaleData_.[[DateFormat]].[[&lt;_dateStyle_&gt;]].
+          1. Let _dateFormat_ be _dataLocaleData_.[[DateFormat]].[[&lt;_dateStyle_&gt;]].[[pattern]].
         1. If _dateStyle_ is not *undefined* and _timeStyle_ is not *undefined*, then
           1. Let _connector_ be _dataLocaleData_.[[DateTimeFormat]].[[&lt;_dateStyle_&gt;]].
           1. Return the string _connector_ with the substring `"{0}"` replaced with _timeFormat_ and the substring `"{1}"` replaced with _dateFormat_.
@@ -340,7 +349,7 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         </li>
         <li>
           <ins>
-            [[LocaleData]][locale] must contain [[DateFormat]], [[TimeFormat]] and [[DateTimeFormat]] fields, the value of these fields are Records, where each of which has [[full]], [[long]], [[medium]] and [[short]] fields. These fields have string pattern values for [[DateFormat]] and [[DateTimeFormat]]; for [[TimeFormat]], they are records with [[pattern]] and [[pattern12]] fields, which are string patterns. For [[DateTimeFormat]], the field values must contain the strings `"{0}"` and `"{1}"`.
+            [[LocaleData]][locale] must contain [[DateFormat]], [[TimeFormat]] and [[DateTimeFormat]] fields, the value of these fields are Records, where each of which has [[full]], [[long]], [[medium]] and [[short]] fields. For [[DateFormat]] and [[TimeFormat]], the value of these fields must be a record, which has a subset of the fields shown in Table 1, where each field must have one of the values specified for the field in Table 1. Each of the records must also have a pattern field, whose value is a String value that contains for each of the date and time format component fields of the record a substring starting with "{", followed by the name of the field, followed by "}". If the record has an hour field, it must also have a pattern12 field, whose value is a String value that, in addition to the substrings of the pattern field, contains a substring "{ampm}". For [[DateTimeFormat]], the field value must be a string pattern which contains the strings "{0}" and "{1}".
           </ins>
          </li>
       </ul>
