--- a/spec.html
+++ b/spec.html
@@ -363,6 +363,9 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
             1. Else, let _v_ be *undefined*.
           1. Else,
             1. Let _v_ be the value of _dtf_'s internal slot whose name is the Internal Slot value of the current row.
+          1. <ins>If the Internal Slot value of the current row is an Internal Slot value in <emu-xref href="#table-datetimeformat-components"></emu-xref>, then</ins>
+            1. <ins>If _dtf_.[[DateStyle]] is not *undefined* or _dtf_.[[TimeStyle]] is not *undefined*, then</ins>
+              1. <ins>Let _v_ be *undefined*.</ins>
           1. If _v_ is not *undefined*, then
             1. Perform ! CreateDataPropertyOrThrow(_options_, _p_, _v_).
         1. Return _options_.
