--- a/spec.html
+++ b/spec.html
@@ -223,7 +223,7 @@ contributors: Zibi Braniecki, Daniel Ehrenberg
         1. <ins>If _dateStyle_ is not *undefined* or _timeStyle_ is not *undefined*, let _needDefaults_ be *false*.</ins>
         1. <ins>If _required_ is *"date"* and _timeStyle_ is not *undefined*,</ins>
           1. <ins>Throw a *TypeError* exception.</ins>
-        1. <ins>If _required_ is *"time"* and _dateStyle is not *undefined*,</ins>
+        1. <ins>If _required_ is *"time"* and _dateStyle_ is not *undefined*,</ins>
           1. <ins>Throw a *TypeError* exception.</ins>
         1. If _needDefaults_ is *true* and _defaults_ is either *"date"* or *"all"*, then
           1. For each of the property names *"year"*, *"month"*, *"day"*, do
